--- a/src/style/components/_background-layout.scss
+++ b/src/style/components/_background-layout.scss
@@ -1,6 +1,4 @@
 .background-layout {
-  background: url('../img/index-bg.png') no-repeat;
-  background-size: contain;
   min-height: 100vh;
   position: relative;
   &_with-back {
@@ -14,22 +12,40 @@
       height: calc(100% - 13.125rem);
       z-index: 1;
       top: rem(210);
+      @media (max-width: 540px) {
+        height: calc(100% - 7rem);
+        top: 7rem;
+      }
+    }
+    &.exchange {
+      @media (min-width: 1080px) {
+        &:after {
+          display: none;
+        }
+      }
     }
   }
-  @media (max-width: 1024px) and (max-height: 768px) and (orientation: landscape) {
-    background-size: cover;
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background: url('../img/index-bg.png') no-repeat;
+    background-size: contain;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    @media (max-width: 1024px) and (max-height: 1366px) {
+      background-size: cover;
+    }
+    @media (max-width: 540px) {
+      // background-position-x: 100%;
+    }
   }
-  @media (max-width: 1024px) and (max-height: 1366px) {
-    background-size: cover;
-  }
-  @media (max-width: 1080px) {
-    background-position-x: -360px;
-  }
-  @media (max-width: 900px) {
-    background-position-x: -500px;
-  }
-  @media (max-width: 475px) {
-    background-position-x: 62%;
+  .footer {
+    position: relative;
+    z-index: 5;
   }
 }
 
@@ -37,4 +53,10 @@
   padding: rem(19 54 0 0);
   position: relative;
   z-index: 5;
+  @media (max-width: 998px) {
+    padding: {
+      left: rem(20);
+      right: rem(20);
+    }
+  }
 }
