--- a/src/style/components/_big-header.scss
+++ b/src/style/components/_big-header.scss
@@ -12,8 +12,18 @@
   @media (max-width: 800px) {
     padding: rem(50 50 50 38);
   }
+  @media (max-width: 540px) {
+    height: 7rem;
+    padding: {
+      left: rem(25);
+      right: rem(25);
+    }
+  }
 }
 
 .big-header__logo {
   max-width: rem(389);
+  @media (max-width: 540px) {
+    max-width: rem(220);
+  }
 }
