--- a/src/style/components/_checkbox.scss
+++ b/src/style/components/_checkbox.scss
@@ -39,8 +39,8 @@ $checkbox-border: #808495;
   position: absolute;
   top: 0;
   left: 0;
-  height: rem(18);
-  width: rem(18);
+  height: 18px;
+  width: 18px;
   background-color: #fff;
   border: 1px solid $checkbox-border;
   border-radius: 5px;
@@ -56,11 +56,23 @@ $checkbox-border: #808495;
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
   }
+  @media (max-width: 1440px) {
+    width: 14px;
+    height: 14px;
+    border-radius: 3px;
+    &:after {
+      top: 1px;
+      left: 50%;
+      transform: translateX(-50%) rotate(45deg);
+      width: 3px;
+      height: 6px;
+    }
+  }
 }
 
 .checkbox__checkmark_small {
-  width: rem(16);
-  height: rem(16);
+  width: 16px;
+  height: 16px;
 }
 
 .checkbox__checkmark_medium {
@@ -85,5 +97,8 @@ $checkbox-border: #808495;
     width: rem(12);
     height: rem(24);
     border-width: 0 4px 4px 0;
+    @media (max-width: 540px) {
+      top: 1px;
+    }
   }
 }
