--- a/src/style/components/_contact-container.scss
+++ b/src/style/components/_contact-container.scss
@@ -2,4 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  margin-bottom: rem(50);
+  @media (max-width: 998px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
