--- a/src/style/components/_contact-form.scss
+++ b/src/style/components/_contact-form.scss
@@ -1,6 +1,7 @@
 .contact-form {
   max-width: rem(693);
   flex-basis: 100%;
+  width: 100%;
 }
 
 .contact-form__content {
@@ -17,4 +18,7 @@
   }
   color: $gray;
   margin-bottom: rem(40);
+  @media (max-width: 540px) {
+    font-size: rem(20);
+  }
 }
