--- a/src/style/components/_dashboard.scss
+++ b/src/style/components/_dashboard.scss
@@ -5,6 +5,7 @@ $dashboard-bg: #f7f9fb;
   flex-grow: 1;
   background-color: $dashboard-bg;
   padding: rem(30 30 30 28);
+  padding-left: rem(18);
   &.transactions {
     padding-left: rem(10);
     @media (max-width: 768px) {
