--- a/src/style/components/_exchange-form.scss
+++ b/src/style/components/_exchange-form.scss
@@ -1,6 +1,9 @@
 .exchange-form {
   width: 100%;
   padding-left: rem(33);
+  @media (max-width: 1080px) {
+    padding-left: 0;
+  }
 }
 
 .exchange-form__actions {
