--- a/src/style/components/_exchange.scss
+++ b/src/style/components/_exchange.scss
@@ -1,3 +1,24 @@
+.exchange {
+  .content {
+    position: relative;
+    z-index: 5;
+  }
+  @media (max-width: 1200px) {
+    padding-right: rem(108);
+  }
+  @media (max-width: 1080px) {
+    padding: 0;
+  }
+  @media (max-width: 680px) {
+    .footer {
+      padding: {
+        left: rem(50);
+        right: rem(50);
+      }
+    }
+  }
+}
+
 .exchange__form {
   padding: {
     right: rem(84);
@@ -12,6 +33,26 @@
   }
   @media (max-width: 1500px) {
     padding-right: 0;
+    padding-left: rem(550);
+  }
+  @media (max-width: 1200px) {
+    padding-left: rem(800);
+  }
+  @media (max-width: 1080px) {
+    align-items: center;
+    padding: rem(30 200 0);
+    & + .first-slide__link {
+      padding-right: rem(200);
+    }
+  }
+  @media (max-width: 680px) {
+    padding: {
+      left: rem(50);
+      right: rem(50);
+    }
+    & + .first-slide__link {
+      padding-right: rem(50);
+    }
   }
 }
 
@@ -24,6 +65,9 @@
   color: $purple;
   margin-bottom: rem(75);
   padding-right: rem(204);
+  @media (max-width: 1080px) {
+    padding-right: 0;
+  }
 }
 
 .exchange__subtitle {
