--- a/src/style/components/_first-slide.scss
+++ b/src/style/components/_first-slide.scss
@@ -23,7 +23,7 @@
     margin-left: rem(300);
   }
   @media (max-width: 768px) {
-    margin-left: rem(0);
+    margin-left: 0;
   }
 }
 
@@ -41,18 +41,8 @@
     &:hover, &:focus {
       color: darken($bright-blue, 20%);
     }
-  }
-  @media (max-width: 1024px) and (max-height: 1366px) {
-    color: #fff;
-    &:hover, &:focus {
-      color: darken(#fff, 20%);
-    }
-  }
-
-  @media (max-width: 768px) {
-    color: #fff;
-    &:hover, &:focus {
-      color: darken(#fff, 20%);
+    @media (max-width: 1080px) {
+      margin-right: 0;
     }
   }
 }
@@ -64,6 +54,13 @@
   padding-right: rem(78);
   @media (max-width: 1080px) {
     padding-right: 0;
+  }
+  @media (max-width: 540px) {
+    flex-direction: column-reverse;
+    align-items: flex-end;
+    .button {
+      margin-bottom: rem(20);
+    }
   }
 }
 
@@ -90,5 +87,12 @@
   &_inline-block {
     display: inline-block;
     margin-right: rem(118);
+    @media (max-width: 540px) {
+      display: block;
+      margin: {
+        right: 0;
+      }
+    }
   }
+
 }
