--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -11,10 +11,22 @@
       left: rem(13);
       bottom: rem(10);
     }
+    @media (max-width: 700px) {
+      flex-direction: column;
+      align-items: flex-end;
+      padding: {
+        left: rem(13);
+        right: rem(13);
+        bottom: rem(20);
+      }
+    }
   }
   &_relative {
     position: relative;
     z-index: 5;
+  }
+  @media (max-width: 900px) {
+    padding-top: rem(20);
   }
 }
 
@@ -30,6 +42,9 @@
   margin: {
     top: rem(16);
     right: rem(13);
+  }
+  @media (max-width: 700px) {
+    margin-bottom: rem(20);
   }
 }
 
