--- a/src/style/components/_select.scss
+++ b/src/style/components/_select.scss
@@ -10,6 +10,7 @@
   }
   .select2-container {
     min-width: rem(120);
+    max-width: 100%;
   }
   .select2-container .select2-selection--single {
     height: auto;
