--- a/src/style/components/_tabs.scss
+++ b/src/style/components/_tabs.scss
@@ -7,6 +7,12 @@ $active-tab-color: #3fc8ff;
   justify-content: space-between;
   margin-bottom: rem(35);
   padding-left: rem(52);
+  @media (max-width: 968px) {
+    padding-left: 0;
+  }
+  @media (max-width: 540px) {
+    flex-direction: column;
+  }
 }
 
 .tabs__tab {
@@ -35,6 +41,20 @@ $active-tab-color: #3fc8ff;
       position: absolute;
     }
   }
+  @media (max-width: 968px) {
+    font-size: rem(20);
+  }
+  @media (max-width: 760px) {
+    font-size: rem(18);
+  }
+  @media (max-width: 540px) {
+    font-size: rem(20);
+    width: 100%;
+    padding: {
+      left: rem(15);
+      right: rem(15);
+    }
+  }
 }
 
 .tabs__content {
@@ -48,6 +68,18 @@ $active-tab-color: #3fc8ff;
     p {
       font-size: rem(14);
       color: $gray;
+    }
+  }
+  @media (max-width: 968px) {
+    margin-left: 0;
+  }
+  @media (max-width: 760px) {
+    font-size: rem(18);
+  }
+  @media (max-width: 540px) {
+    padding: {
+      left: rem(15);
+      right: rem(15);
     }
   }
 }
