--- a/src/style/components/_user-docs.scss
+++ b/src/style/components/_user-docs.scss
@@ -2,7 +2,7 @@
   border: 1px solid #707070;
   padding: rem(17 72 27 41);
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   &:not(:last-child) {
     margin-bottom: rem(18);
@@ -14,13 +14,13 @@
     }
   }
   @media (max-width: 540px) {
-    
+    flex-wrap: wrap;
   }
 }
 
 .user-docs__info {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
   &:first-child {
@@ -28,9 +28,27 @@
     @media (max-width: 990px) {
       max-width: 60%;
     }
+    @media (max-width: 540px) {
+      max-width: 50%;
+    }
   }
   &:last-child {
-    max-width: 31.2%;
+    max-width: 36.2%;
+    justify-content: space-between;
+    @media (max-width: 600px) {
+      justify-content: flex-start;
+    }
+  }
+  @media (max-width: 540px) {
+    &:last-child,
+    &:first-child {
+      width: 100%;
+      max-width: none;
+      justify-content: flex-start;
+    }
+    &:first-child {
+      margin-bottom: rem(15);
+    }
   }
 }
 
@@ -41,31 +59,43 @@
   color: #0f0a30;
   margin: {
     top: rem(7);
-    right: rem(10);
+    right: rem(30);
   }
   @media (max-width: 540px) {
-  }
-}
-
-.user-docs__col {
-  font-size: rem(13);
-  color: #767791;
-  &:not(:last-child) {
-    margin-right: rem(10);
-  }
-  &_documents {
-    &:not(:last-child) {
-      margin-right: rem(44);
-      @media (max-width: 600px) {
-        margin-right: rem(10);
-      }
+    margin: {
+      top: 0;
+      right: 0;
+      bottom: rem(20);
     }
   }
 }
 
 .user-docs__row {
+  font-size: rem(13);
+  color: #767791;
+  display: flex;
+  justify-content: space-between;
   &:not(:last-child) {
-    margin-bottom: rem(13);
+    margin-bottom: rem(11);
+    @media (max-width: 540px) {
+      margin-bottom: rem(20);
+    }
+  }
+  @media (max-width: 540px) {
+    flex-wrap: wrap;
+  }
+}
+
+.user-docs__section {
+  width: 100%;
+}
+
+.user-docs__doc-name {
+  width: 46%;
+  @media (max-width: 540px) {
+    width: auto;
+    min-width: rem(117);
+    margin-right: rem(20);
   }
 }
 
@@ -74,19 +104,27 @@
   background-color: $violet;
   color: #fff;
   font-size: rem(12);
-  padding: rem(2 43);
+  line-height: 1.2;
+  padding: rem(3 43);
   transition: background-color 250ms;
   &:hover, &:focus {
     background-color: darken($violet, 7%);
+  }
+  @media (max-width: 600px) {
+    margin-right: rem(20);
   }
 }
 
 .user-docs__status {
   font-size: rem(13);
+  width: 20%;
   &_confirm {
     color: $violet;
   }
   &_confirmed {
     color: $confirmed-green;
+  }
+  @media (max-width: 600px) {
+    width: auto;
   }
 }
