--- a/src/style/components/_wallet-balance.scss
+++ b/src/style/components/_wallet-balance.scss
@@ -46,7 +46,7 @@
   &_margin-bottom-0 {
     margin-bottom: 0;
   }
-  @media (min-width: 1501px) and (max-width: 1700px) {
+  @media (max-width: 1700px) {
     font-size: rem(22);
   }
 }
