--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -137,7 +137,7 @@ h1 {
 }
 
 .mobile-wrapper {
-  margin-top: 5rem;
+  margin-top: 3.5rem;
 }
 
 .content {
@@ -191,7 +191,7 @@ img {
 //   }
 // }
 
-@media (max-width: 1500px) and (max-height: 850px) {
+@media (max-width: 1500px) {
   html {
     font-size: 12px;
   }
