--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -28,6 +28,12 @@
   @media (max-width: 900px) {
     padding-top: rem(20);
   }
+  @media (max-width: 540px) {
+    padding: {
+      left: 1.5625rem;
+      right: 1.5625rem;
+    }
+  }
 }
 
 .footer__rights {
