--- a/src/style/components/_form.scss
+++ b/src/style/components/_form.scss
@@ -26,6 +26,10 @@ select, input {
     display: flex;
     justify-content: flex-start;
     align-items: stretch;
+    @media (max-width: 540px) {
+      align-items: center;
+      line-height: 1.3;
+    }
   }
   &_margin-bottom-36 {
     margin-bottom: rem(36);
