--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -137,7 +137,11 @@ h1 {
 }
 
 .mobile-wrapper {
-  margin-top: 3.5rem;
+  margin-top: 1rem;
+  padding-bottom: 2rem;
+  @media (max-width: 320px) {
+    margin-top: 1.5rem;
+  }
 }
 
 .content {
