change get wallet to go wallet + add input type file

--- a/src/style/components/_block.scss
+++ b/src/style/components/_block.scss
@@ -172,6 +172,13 @@
   display: flex;
   align-items: center;
   text-transform: uppercase;
+  position: relative;
+  cursor: pointer;
+  input {
+    position: absolute;
+    left: -9999px;
+    opacity: 0;
+  }
 }
 
 .block__reload-btn {
